# aoc

./: .gitignore  pyproject.toml
.github/workflows/: solve.yml
01/: solve.py
2016/: aoc-2016.cabal
2016/haskell/: aoc-2016.cabal
2016/haskell/src/: Day01.hs  Utils.hs
2016/haskell/src/Utils/: Point2D.hs
2017/rust/: Cargo.toml
2020/: solve.py
2020/02/: solve.py
2021/05/: solve.py
2021/09/: solve.py
2021/10/: solve.py
2021/13/: solve.py
2021/15/: solve.py
2021/16/: solve.py
2021/17/: solve.py
2021/18/: solve.py
2021/19/: solve.py
2021/21/: solve.py
2021/22/: solve.py
2021/23/: solve.py
2021/24/: Cargo.toml
2022/01/: solve.py
2022/02/: solve.py
2022/03/: solve.py
2022/04/: solve.py
2022/05/: solve.py
2022/06/: solve.py
2022/07/: solve.py
2022/08/: solve.py
2022/09/: solve.py
2022/10/: solve.py
2022/11/: solve.py
2022/12/: solve.py
2022/13/: solve.py
2022/14/: solve.py
2022/15/: solve.py
2022/16/: solve.py
2022/17/: solve.py
2022/18/: solve.py
2022/19/: solve.py
2022/20/: solve.py
2022/21/: solve.py
2022/22/: solve.py
2022/23/: solve.py
2022/24/: solve.py
2022/25/: solve.py
2023/01/: solve.py
2023/02/: solve.py
2023/03/: solve.py
2023/04/: solve.py
2023/05/: solve.py
2023/06/: solve.py
2023/07/: solve.py
2023/08/: solve.py
2023/09/: solve.py
2023/10/: solve.py
2023/11/: solve.py
2023/12/: solve.py
2023/13/: solve.py
2023/14/: solve.py
2023/15/: solve.py
2023/16/: solve.py
2023/17/: solve.py
2023/18/: solve.py
2023/19/: solve.py
2023/20/: solve.py
(+213 files in other folders)
