cabal-version:      3.0
name:               aoc2016
version:            0.1.0.0

common build-directives
    build-depends:      base >=4.21
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -O2
                        -Wall
                        -threaded
                        -rtsopts "-with-rtsopts=-N"

executable day01
    import:             build-directives
    main-is:            Day01.hs
