cabal-version:      3.0
name:               aoc2016
version:            0.1.0.0

common common-extensions
    default-extensions:     BlockArguments

common build-directives
    build-depends:      base >=4.21
    hs-source-dirs:     src
    other-modules:      Utils
    default-language:   Haskell2010
    ghc-options:        -O2
                        -Wall
                        -threaded
                        -rtsopts "-with-rtsopts=-N"

library
    import:                 common-extensions
    build-depends:          base >=4.21
    exposed-modules:        Utils
    hs-source-dirs:         src


executable day01
    import:             common-extensions, build-directives
    main-is:            Day01.hs
    build-depends:      split
